--- a/macinec_janik_project1.ipynb
+++ b/macinec_janik_project1.ipynb
@@ -1265,6 +1265,27 @@
     "\n",
     "* set index to column Unnamed: 0 and rename that column"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TEST1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TEST2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TEST3"
+   ]
   }
  ],
  "metadata": {
