Add last changes before coursework submission

--- a/macinec_janik_preprocessing.ipynb
+++ b/macinec_janik_preprocessing.ipynb
@@ -494,7 +494,7 @@
     "collapsed": false
    },
    "source": [
-    "We can see there are duplicates with same name and address, but they are even not representing different medical records (measurements are the same). In some attributes, one of duplicates has value and in the other one is this value missing. That means we need to merge those records before droping duplicates."
+    "We can see there are duplicates with same name and address, but they are not representing different medical records (measurements are the same). Some attributes of one of duplicates may be filled in and some may be missing. However, the other duplicate may be missing the first one's filled in attributes and also have the first one's missing attributes filled in. That means we need to merge those records before droping duplicates."
    ]
   },
   {
@@ -1568,12 +1568,7 @@
     {
      "data": {
       "text/plain": [
-       "0    f\n",
-       "1    f\n",
-       "2    f\n",
-       "3    f\n",
-       "4    f\n",
-       "Name: TBG measured, dtype: object"
+       "array(['f', nan, 'f.14'], dtype=object)"
       ]
      },
      "execution_count": 35,
@@ -1584,7 +1579,7 @@
    ],
    "source": [
     "# Before fixing\n",
-    "df_train['TBG measured'].head()"
+    "df_train['TBG measured'].unique()"
    ]
   },
   {
@@ -1597,12 +1592,7 @@
     {
      "data": {
       "text/plain": [
-       "0    ?\n",
-       "1    ?\n",
-       "2    ?\n",
-       "3    ?\n",
-       "4    ?\n",
-       "Name: TBG, dtype: object"
+       "array(['?', nan], dtype=object)"
       ]
      },
      "execution_count": 36,
@@ -1613,7 +1603,7 @@
    ],
    "source": [
     "# Before fixing\n",
-    "df_train['TBG'].head()"
+    "df_train['TBG'].unique()"
    ]
   },
   {
@@ -1756,7 +1746,7 @@
     {
      "data": {
       "text/plain": [
-       "str"
+       "dtype('O')"
       ]
      },
      "execution_count": 40,
@@ -1767,7 +1757,7 @@
    ],
    "source": [
     "# Before fixing\n",
-    "type(df_train['FTI'].values[0])"
+    "df_train['FTI'].dtype"
    ]
   },
   {
@@ -1780,7 +1770,7 @@
     {
      "data": {
       "text/plain": [
-       "numpy.float64"
+       "dtype('float64')"
       ]
      },
      "execution_count": 41,
@@ -1791,7 +1781,7 @@
    ],
    "source": [
     "# After fixing\n",
-    "type(repaired['FTI'].values[0])"
+    "repaired['FTI'].dtype"
    ]
   },
   {
