Add final modifications of descriptions

--- a/macinec_janik_classification.ipynb
+++ b/macinec_janik_classification.ipynb
@@ -1359,7 +1359,7 @@
    "source": [
     "#### DecisionTree with SMOTE oversampling\n",
     "\n",
-    "Different approach also using oversampling but this time with method called *smote*."
+    "A different approach also using oversampling but this time with method called *smote*."
    ]
   },
   {
@@ -1583,7 +1583,7 @@
     "collapsed": false
    },
    "source": [
-    "### Decision tree parameter tuning"
+    "### DecisionTree parameter tuning"
    ]
   },
   {
@@ -1902,7 +1902,7 @@
     "collapsed": false
    },
    "source": [
-    "Also combination of those parameters has been tried. This can be found below in **Hyperparameter tuning** section."
+    "Also we have tried combination of those parameters. This can be found below in **Hyperparameter tuning** section."
    ]
   },
   {
@@ -2003,7 +2003,7 @@
     "collapsed": false
    },
    "source": [
-    "F1 macro is slightly worse than in case of DecisionTree. For better comparison, we have to try also both oversampling methods with RandomForest.\n",
+    "F1 macro is slightly worse than in case of DecisionTree. For better comparison, we have to try both oversampling methods with RandomForest.\n",
     "\n",
     "#### RandomForest with random oversampling"
    ]
@@ -2084,7 +2084,7 @@
     "collapsed": false
    },
    "source": [
-    "As we can see on F1 macro score, random oversampling helped to achieve better model. It is significantly better when using oversampling, in comparison with DecisionTree. Because of that, let's try also oversampling with smote method."
+    "As we can see on F1 macro score, random oversampling helped to achieve better model. It is significantly better when using oversampling in comparison with DecisionTree. Let's try also oversampling with smote method."
    ]
   },
   {
@@ -2093,7 +2093,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Random forest with SMOTE oversampling"
+    "#### RandomForest with SMOTE oversampling"
    ]
   },
   {
@@ -2203,7 +2203,7 @@
     "collapsed": false
    },
    "source": [
-    "As in DecisionTree usage, also in case of RandomForest, SMOTE oversampling did not elevate model performance.\n",
+    "Using *smote* oversampling method hasn't elevated model performance for neither of classifiers. (DecisionTree, RandomForest)\n",
     "\n",
     "The best result's been achieved using the dataset balanced by random oversampling method. Suprisingly the worst result's been achieved using *smote* oversampling method.\n",
     "\n",
@@ -2398,7 +2398,7 @@
     "collapsed": false
    },
    "source": [
-    "Because of previous experience of using random oversampling with RandomForest, we have tried this configuration also for XGBoost. Using XGBoost, the best F1 macro score have been achieved and would be used for predictions. "
+    "Because of previous experience of using random oversampling with RandomForest, we have tried this configuration also for XGBoost. Using XGBoost, the best F1 macro score has been achieved and would be used for predictions."
    ]
   },
   {
@@ -2504,6 +2504,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Let's predict values and evaluate how well DecisionTree performed:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
@@ -2540,7 +2549,7 @@
     "collapsed": false
    },
    "source": [
-    "Using all attributes had negative impact on DecisionTree score. This can be caused by using features, that can't predict *class* and just degrade model performance."
+    "Using all attributes has negative impact on DecisionTree score. This can be caused by using features, that can't help to predict *class* and just degrade model performance."
    ]
   },
   {
@@ -2549,9 +2558,9 @@
     "collapsed": false
    },
    "source": [
-    "Let's try also Random Forest.\n",
+    "Let's try also RandomForest.\n",
     "\n",
-    "As RandomForest is performing better with oversampled data in our case, we should do oversampling also this time:"
+    "As RandomForest performs better with oversampled data in our case, we should do oversampling also this time:"
    ]
   },
   {
@@ -2597,6 +2606,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Let's predict values and evaluate how well RandomForest performed:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {
@@ -2634,9 +2652,9 @@
     "collapsed": false
    },
    "source": [
-    "As we can see, even in case of RandomForest, using all attributes had negative impact on model performance.\n",
+    "As we can see, even in case of RandomForest, using all attributes has negative impact on model performance.\n",
     "\n",
-    "Probably, choosing all attributes is bad choice in this problem in general. Classifiers perform significantly better with our first choice of attributes based on analysis, rather than using all of them."
+    "Probably, choosing all attributes is bad choice in general. Classifiers perform significantly better with our first choice of attributes based on analysis, rather than using all of them."
    ]
   },
   {
@@ -2649,7 +2667,7 @@
     "\n",
     "Feature selection is efective way to reduce number of attributes. We have tried models using all attributes, but probably not all of them are useful for predictions.\n",
     "\n",
-    "How many of attributes have been tried?"
+    "How many of attributes have we tried?"
    ]
   },
   {
@@ -2783,7 +2801,7 @@
     "collapsed": false
    },
    "source": [
-    "Is is better to visualize, how number of selected features influenced f1 score:"
+    "It is better to visualize to see how number of selected features influenced f1 score:"
    ]
   },
   {
@@ -2818,7 +2836,7 @@
     "collapsed": false
    },
    "source": [
-    "RFECV showed that 89 attributes can be useful for prediction. When looking at at plot above, we can see that approximately the same score can be achieved using less than 10 attributes!\n",
+    "RFECV showed that 89 attributes can be useful for prediction. When looking at the plot above, we can see that approximately the same score can be achieved using less than 10 attributes!\n",
     "\n",
     "Let's check, which features have been selected:"
    ]
@@ -2957,6 +2975,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Let's predict values and evaluate how well they performed:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
@@ -3033,7 +3060,7 @@
    "source": [
     "### Hyperparameter tuning\n",
     "\n",
-    "To raise performance of our models, hyperparameter tuning using RandomizedSearchCV was done. As scoring metric we have chosen *f1 macro* and 10-fold cross-validation. For each classifier, typical hyperparameters have been tried."
+    "To improve performance of our models, we've done hyperparameter tuning using RandomizedSearchCV. As scoring metric we have chosen *f1 macro* and 10-fold cross-validation. For each classifier, typical hyperparameters have been tuned."
    ]
   },
   {
@@ -3044,7 +3071,7 @@
    "source": [
     "#### DecisionTree\n",
     "\n",
-    "For DecisionTree, parameters mentioned before was tuned:"
+    "For DecisionTree, parameters we've tuned parameters already mentioned before:"
    ]
   },
   {
@@ -3278,6 +3305,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Let's check if this model performs any better:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {
@@ -3333,7 +3369,7 @@
     "collapsed": false
    },
    "source": [
-    "For classification patients to 3 classes of their thyroid status, several classifiers and configurations have been tried.\n",
+    "For classification of patients to 3 classes of their thyroid status, we have tried several classifiers and configurations.\n",
     "\n",
     "**We have checked out 3 classifiers based on manually chosen rules:**\n",
     "* using T4U attribute\n",
@@ -3348,7 +3384,7 @@
     "* RandomForest\n",
     "* XGBoost\n",
     "\n",
-    "XGBoost performed the best. In comparison to classifiers based on manually chosen rules, all of those machine learning classifiers performed better. Some parts of score (precision, recall, f1-score) could be worse in machine learning algorithms than in manually based algorithms, but in general were predicting better. Very high recall was achieved on class *decreased binding protein*, that was 100%. None of RandomForest or DecisionTree overcome this score, except XGBoost that is clearly the best choice.\n",
+    "XGBoost performed the best. In comparison to classifiers based on manually chosen rules, all of those machine learning classifiers performed better. Some parts of score (precision, recall, f1-score) could be worse in machine learning algorithms than in manually based algorithms, but in general were predicting better. Very high recall was achieved on class *decreased binding protein*, that was 100%. None of RandomForest or DecisionTree overcame this score, except XGBoost which is clearly the best choice.\n",
     "\n",
     "**DecisionTree and RandomForest classifiers have been used for comparison of:**\n",
     "* *training with all features* - this was shown to be bad choice at all\n",
@@ -3364,7 +3400,7 @@
    "source": [
     "## Different filling methods comparison\n",
     "\n",
-    "Two approaches of filling nan values methods have been implemented. Maybe also filling nan values can influence the result. Whole classification above was done using model filling method (LinearRegression for numerical attributes, RandomForestClassifier for categorical attributes). Now, let's try filling using median and most frequent values, that is easier way and compare both methods:"
+    "Two approaches of filling nan values methods have been implemented. Maybe filling nan values can also influence the result. Whole classification above was done using model filling method (LinearRegression for numerical attributes, RandomForestClassifier for categorical attributes). Now, let's try filling nan values with median and most frequent values. Also let's compare both methods aftewards:"
    ]
   },
   {
@@ -3481,7 +3517,7 @@
     "collapsed": false
    },
    "source": [
-    "To compare, again DecisionTree and RandomForest will be trained:"
+    "For comparison, again DecisionTree and RandomForest will be trained:"
    ]
   },
   {
@@ -3525,6 +3561,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Let's check how model performed:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {
@@ -3562,7 +3607,7 @@
     "collapsed": false
    },
    "source": [
-    "DecisionTree classifier, trained on dataset with filled missing values using most frequent value and median, performed approximately the same as when filling missing values with model. Let's do the same with RandomForest classifier."
+    "DecisionTree classifier, trained on dataset with missing values filled by most frequent value and median performed approximately the same as when filling missing values with model. Let's do the same with RandomForest classifier:"
    ]
   },
   {
@@ -3619,6 +3664,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Let's check how model performed:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 90,
    "metadata": {
@@ -3656,7 +3710,7 @@
     "collapsed": false
    },
    "source": [
-    "As we can see, in both cases (RandomForest and DecisionTree), the score is very similar for both filling approaches. Probably, this is influenced by data values distribution. In many cases, most frequent value was also predicted by model, and the same with numerical values and median. Nevertheless we believe that filling missing values using models is still more sensible and effective."
+    "As we can see, in both cases (RandomForest and DecisionTree), the score is very similar for both filling approaches. Probably, this is influenced by data values distribution. In many cases, the most frequent value was also predicted by model. The same situation was with numerical values and median. However, we believe that filling missing values using models is still more sensible and effective."
    ]
   },
   {
